--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ const TITO_HTML=`
 <div class="card">
 <h2>Hvem var Tito?</h2>
 
-<div class="note"><img src="https://i.postimg.cc/PJHW1K0G/received-1999223210842855.jpg" width="350"/></div>
+<div class="note"><img src="https://i.postimg.cc/PJHW1K0G/received-1999223210842855.jpg" width="350"/>
 
 Josip Broz Tito (1892–1980) var den legendariske leder, der samlede og styrede Jugoslavien efter 2. Verdenskrig. Han var både partisanhelt, diktator og karismatisk verdensfigur – en mand, der kunne få både Øst og Vest til at smile til ham på samme tid.</div>
 <div class="note">Tito brød med Stalin i 1948 og nægtede at lade Moskva bestemme. I stedet skabte han sit eget system – “jugoslavisk socialisme” – hvor folk kunne rejse, handle med Vesten og stadig kalde sig kommunister.</div>
