--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@ Josip Broz Tito (1892–1980) var den legendariske leder, der samlede og styrede
 <div class="note">"Bratstvo i jedinstvo" — broderskab og enhed.
 
 </div>
+</div>
 <div class="card">
 <h2>Fun facts om Tito</h2>
 <ul class="note">
